Bug 631827 - Use CSS to set the "align" and "pack" attributes on Add-ons Manager to make easier for themes to handle items. r=Unfocused a=beltzner
UltraBlame original commit: 7b6be2af0613624f8984438dc5014d22f8b7370a

--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -2375,6 +2375,24 @@ margin
 3px
 7px
 ;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
 }
 .
 icon
@@ -2597,6 +2615,15 @@ weight
 :
 bold
 ;
+-
+moz
+-
+box
+-
+align
+:
+end
+;
 }
 .
 creator
@@ -2652,6 +2679,15 @@ start
 :
 6px
 ;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
 }
 .
 description
@@ -2676,6 +2712,180 @@ margin
 start
 :
 48px
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+.
+content
+-
+container
+.
+basicinfo
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+start
+;
+}
+.
+addon
+[
+status
+=
+"
+installing
+"
+]
+>
+.
+content
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+stretch
+;
+}
+.
+update
+-
+info
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+.
+advancedinfo
+-
+container
+.
+update
+-
+available
+{
+-
+moz
+-
+box
+-
+align
+:
+end
+;
+}
+.
+install
+-
+status
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+end
+;
+-
+moz
+-
+box
+-
+align
+:
+end
+;
+}
+.
+name
+-
+outer
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
+}
+.
+relnotes
+-
+toggle
+-
+container
+.
+icon
+-
+outer
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+start
+;
+}
+.
+status
+-
+container
+.
+control
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+end
 ;
 }
 .
