--- a/toolkit/themes/winstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/winstripe/mozapps/extensions/extensions.css
@@ -3136,6 +3136,24 @@ margin
 3px
 7px
 ;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
 }
 .
 icon
@@ -3373,6 +3391,15 @@ shadow
 #
 FFF
 ;
+-
+moz
+-
+box
+-
+align
+:
+end
+;
 }
 .
 creator
@@ -3417,6 +3444,15 @@ start
 :
 6px
 ;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
 }
 .
 description
@@ -3457,6 +3493,180 @@ shadow
 1px
 #
 FFF
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+.
+content
+-
+container
+.
+basicinfo
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+start
+;
+}
+.
+addon
+[
+status
+=
+"
+installing
+"
+]
+>
+.
+content
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+stretch
+;
+}
+.
+update
+-
+info
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+.
+advancedinfo
+-
+container
+.
+update
+-
+available
+{
+-
+moz
+-
+box
+-
+align
+:
+end
+;
+}
+.
+install
+-
+status
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+end
+;
+-
+moz
+-
+box
+-
+align
+:
+end
+;
+}
+.
+name
+-
+outer
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
+}
+.
+relnotes
+-
+toggle
+-
+container
+.
+icon
+-
+outer
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+start
+;
+}
+.
+status
+-
+container
+.
+control
+-
+container
+{
+-
+moz
+-
+box
+-
+pack
+:
+end
 ;
 }
 .
